--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,10 @@
       <artifactId>scm-api</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.jenkins-ci.plugins</groupId>
+      <artifactId>credentials-binding</artifactId>
+    </dependency>
+    <dependency>
       <groupId>io.jenkins.plugins</groupId>
       <artifactId>gitlab-api</artifactId>
       <version>1.0.6</version>
